# rust-playground

./: README.md
aws-route53-backup-cli/: Cargo.toml  README.md
aws-route53-backup-cli/src/: datahelpers.rs  lib.rs  main.rs  mod.rs  optional_formatter.rs
aws-route53-backup-cli/src/testing/: list_domains.xml
github-search/: Cargo.toml
github-search/src/: main.rs
jmx-sidecar/: Cargo.toml
jmx-sidecar/src/: main.rs
json/: Cargo.toml  RUN.md
json/src/: main.rs  tokenizer.rs
kafka-client-test/: Cargo.toml  README.md
kafka-client-test/src/: main.rs
kafka-rest-metrics-exporter/: Cargo.toml
kafka-rest-metrics-exporter/http-metrics/: Cargo.toml
kafka-rest-metrics-exporter/http-metrics/src/: main.rs
kafka-rest-metrics-exporter/jmx-metrics/: Cargo.toml
kafka-rest-metrics-exporter/jmx-metrics/src/: main.rs
list-aws-sso-permissions/: Cargo.toml
list-aws-sso-permissions/src/: lib.rs  main.rs
nanovm-unikernel-rust-macos/: README.md
nanovm-unikernel-rust-macos/hello_world/: Cargo.toml
nanovm-unikernel-rust-macos/hello_world/src/: main.rs
platform-cli/: Cargo.toml  Makefile  README.md
platform-cli/src/: lib.rs  main.rs  module_echo.rs  tags.rs
platform-cli/src/templates/: module_echo.hbs
route53-dump/: Cargo.toml
route53-dump/src/: main.rs
small_plays/args-play/: Cargo.toml  README.md
small_plays/socket-server-client/socket-binary/: Cargo.toml
small_plays/socket-server-client/socket-binary/src/: main.rs
small_plays/socket-server-client/socket-client/: Cargo.toml
small_plays/socket-server-client/socket-client/src/: main.rs
test-bind-c/: Cargo.toml  README.md  call_rust_lib.py
test-bind-c/src/: lib.rs
wc/src/: aaa.txt  main.rs
